--- a/stylesheet.css
+++ b/stylesheet.css
@@ -56,7 +56,7 @@ body {
 	width: 100%;
 	height: 482px;
 	position: relative;
-	background: url(https://d2l930y2yx77uc.cloudfront.net/production/uploads/images/6432841/picture_pc_e9cd48501e8ad5f03a13bfefcf9e1f19.jpg) no-repeat;
+	background: url(https://assets.st-note.com/production/uploads/images/28674410/rectangle_large_type_2_5bf739f3f3ece2d7ca77515b798a2510.jpg?fit=bounds&quality=60&width=1280) no-repeat;
 	background-size:cover;
 }
 h1 {
