--- a/stylesheet.css
+++ b/stylesheet.css
@@ -66,9 +66,9 @@ h1 {
 	bottom: 0;
 	left: 0;
 	width: 600px;
-	height: 85px;
+	height: 10px;
 	margin: auto;
-	color: #ccc;
+	color: #5193b3;
 	font-size: 4.3rem;
 	text-align: center;
 	display: table-cell;
