--- a/stylesheet.css
+++ b/stylesheet.css
@@ -56,7 +56,7 @@ body {
 	width: 100%;
 	height: 482px;
 	position: relative;
-	background: url(https://assets.st-note.com/production/uploads/images/28674410/rectangle_large_type_2_5bf739f3f3ece2d7ca77515b798a2510.jpg?fit=bounds&quality=60&width=1280) no-repeat;
+	background: url(trimming2_ShiroShiro.jpg) no-repeat;
 	background-size:cover;
 }
 h1 {
