--- a/stylesheet.css
+++ b/stylesheet.css
@@ -56,7 +56,7 @@ body {
 	width: 100%;
 	height: 482px;
 	position: relative;
-	background: url(trimming2_ShiroShiro.jpg) no-repeat;
+	background: url(Houmukun_reading.jpg) no-repeat;
 	background-size:cover;
 }
 h1 {
