--- a/stylesheet.css
+++ b/stylesheet.css
@@ -53,7 +53,7 @@ body {
 	height: 482px;
 	background-size: cover;
 } #main_image_inner {
-	width: 100%;
+	width: 700px;
 	height: 482px;
 	position: relative;
 	background: url(Trimming_Houmukun_reading.jpg) no-repeat;
