--- a/stylesheet.css
+++ b/stylesheet.css
@@ -162,11 +162,11 @@ nav {
 	background-repeat: no-repeat;
 	background-size: cover;
 } #photo01 {
-	background-image: url(Soumukun_1.png);
+	background-image: url(Machimasu.png);
 } #photo02 {
 	background-image: url(Houmukun_thinking.jpg);
 } #photo03 {
-	background-image: url(Inufriend_11.png);
+	background-image: url(trimming_IMG_6952.jpg);
 }
 .right {
 	float: right;
