--- a/stylesheet.css
+++ b/stylesheet.css
@@ -166,7 +166,7 @@ nav {
 } #photo02 {
 	background-image: url(Houmukun_thinking.jpg);
 } #photo03 {
-	background-image: url(trimming_IMG_6952.jpg);
+	background-image: url(IMG_6952.jpg);
 }
 .right {
 	float: right;
