--- a/stylesheet.css
+++ b/stylesheet.css
@@ -77,7 +77,7 @@ h1 {
 .scroll {
 	height: 87px;
 	width: 100%;
-	background-color: #aaa;
+	background-color: #3c29da;
 	position: relative;
 	display: table;
 }
@@ -87,7 +87,7 @@ h1 {
 	width: 0px;
 	height: 0px;
 	bottom: -14px;
-	border-top: 43px solid #aaa;
+	border-top: 43px solid #3c29da;
 	border-right: 60px solid transparent;
 	border-left: 60px solid transparent;
 	left: 0;
@@ -174,7 +174,7 @@ nav {
 	height: 400px;
 }
 .text {
-	background-color: #aaa;
+	background-color: #3c29da;
 }
 .contents p,h4 {
 	margin: 30px 120px 0 21px;
@@ -185,7 +185,7 @@ h4 {
 }
 .main_contact {
 	height: 163px;
-	background-color: #aaa;
+	background-color: #3c29da;
 	margin-bottom: 100px;
 	overflow: hidden;
 }
